Move calibration function to py file

--- a/renew/05-calibration.ipynb
+++ b/renew/05-calibration.ipynb
@@ -24,17 +24,11 @@
    "source": [
     "#| warning: false\n",
     "from jax import jit, random\n",
-    "from jax import numpy as jnp\n",
-    "import numpy as np\n",
     "import pandas as pd\n",
-    "from datetime import datetime, timedelta\n",
+    "from datetime import datetime\n",
     "import numpyro\n",
-    "from numpyro import distributions as dist\n",
     "import arviz as az\n",
-    "from plotly.subplots import make_subplots\n",
-    "import plotly.graph_objects as go\n",
     "from IPython.display import Markdown\n",
-    "pd.options.plotting.backend = \"plotly\"\n",
     "from plotly.express.colors import qualitative as qual_colours\n",
     "\n",
     "from estival.sampling import tools as esamp\n",
@@ -43,7 +37,17 @@
     "from emu_renewal.process import CosineMultiCurve\n",
     "from emu_renewal.distributions import GammaDens\n",
     "from emu_renewal.renew import RenewalModel\n",
-    "from emu_renewal.outputs import get_spaghetti_from_params, get_quant_df_from_spaghetti, plot_spaghetti, plot_uncertainty_patches, PANEL_SUBTITLES"
+    "from emu_renewal.outputs import get_spaghetti_from_params, get_quant_df_from_spaghetti, plot_spaghetti, plot_uncertainty_patches, PANEL_SUBTITLES\n",
+    "from emu_renewal.calibration import StandardCalib"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from emu_renewal.calibration import StandardCalib"
    ]
   },
   {
@@ -71,12 +75,16 @@
    "outputs": [],
    "source": [
     "fitter = CosineMultiCurve()\n",
-    "renew_model = RenewalModel(33e6, analysis_start, analysis_end, run_in, proc_update_freq, fitter, GammaDens(), fitter, 50, epoch)\n",
-    "\n",
-    "def get_inc_result(gen_mean, gen_sd, proc, seed, cdr):\n",
-    "    return renew_model.renewal_func(gen_mean, gen_sd, proc, seed).incidence[run_in:] * cdr\n",
-    "\n",
-    "renewal_wrap = jit(get_inc_result)"
+    "renew_model = RenewalModel(33e6, analysis_start, analysis_end, run_in, proc_update_freq, fitter, GammaDens(), fitter, 50, epoch)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "calib = StandardCalib(renew_model, select_data)"
    ]
   },
   {
@@ -101,37 +109,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "calib_desc = (\n",
-    "    \"\\n\\n### Calibration targets\\nThe model described above was fit to the target data \"\n",
-    "    \"to minimise the density of the observed number of cases at each available data point \"\n",
-    "    \"from a normal distribution centred at the modelled notification rate. \"\n",
-    "    \"Modelled notifications are calculated as the product of modelled incidence and the \"\n",
-    "    \"(constant through time) case detection proportion. \"\n",
-    ")\n",
-    "\n",
-    "def calib_model():\n",
-    "    param_updates = {k: numpyro.sample(k, dist.Uniform(v[\"lower\"], v[\"upper\"])) for k, v in params_dict.items()}\n",
-    "    proc_dispersion = numpyro.sample(\"proc_dispersion\", dist.HalfNormal(1.0))\n",
-    "    n_process_periods = len(renew_model.x_proc_data.points)\n",
-    "    proc_dist = dist.Normal(jnp.repeat(0.0, n_process_periods), proc_dispersion)\n",
-    "    param_updates[\"proc\"] = numpyro.sample(\"proc\", proc_dist)\n",
-    "    logmodel_res = jnp.log(renewal_wrap(**param_updates))\n",
-    "    logtarget = jnp.log(jnp.array(select_data))\n",
-    "    dispersion = numpyro.sample(\"dispersion\", dist.Uniform(jnp.log(1.0), jnp.log(1.5)))\n",
-    "    like = dist.Normal(logmodel_res, dispersion).log_prob(logtarget).sum()\n",
-    "    numpyro.factor(\"notifications_ll\", like)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "kernel = numpyro.infer.NUTS(calib_model, dense_mass=True)\n",
+    "kernel = numpyro.infer.NUTS(calib.calibration, dense_mass=True)\n",
     "mcmc = numpyro.infer.MCMC(kernel, num_chains=2, num_samples=1000, num_warmup=1000)\n",
     "rng_key = random.PRNGKey(1)\n",
-    "mcmc.run(rng_key, extra_fields=(\"accept_prob\",))"
+    "mcmc.run(rng_key, extra_fields=(\"accept_prob\",), params=params_dict)"
    ]
   },
   {
@@ -163,15 +144,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sample_params.iloc[0][\"gen_mean\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "def get_full_result(gen_mean, gen_sd, proc, seed, cdr):\n",
     "    return renew_model.renewal_func(gen_mean, gen_sd, proc, seed)\n",
     "\n",
@@ -187,15 +159,6 @@
    "outputs": [],
    "source": [
     "Markdown(renew_model.get_description())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "Markdown(calib_desc)"
    ]
   },
   {
