Fix parameter rounding that showed zeroes

--- a/renew/05-calibration.ipynb
+++ b/renew/05-calibration.ipynb
@@ -209,6 +209,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "Markdown(\"### Calibration\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Markdown(calib.get_description())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "Markdown(params_df.to_markdown())"
    ]
   },
