Final tidying up of approach to working out common indices for analysis

--- a/renew/02-analysis.ipynb
+++ b/renew/02-analysis.ipynb
@@ -55,8 +55,7 @@
     "pop = 33e6\n",
     "analysis_start = datetime(2021, 3, 1)\n",
     "analysis_end = datetime(2021, 11, 1)\n",
-    "select_data = mys_data.loc[analysis_start: analysis_end]\n",
-    "epoch = Epoch(datetime(2019, 12, 31))"
+    "select_data = mys_data.loc[analysis_start: analysis_end]"
    ]
   },
   {
@@ -66,6 +65,7 @@
    "outputs": [],
    "source": [
     "fitter = CosineMultiCurve()\n",
+    "epoch = Epoch(datetime(2019, 12, 31))\n",
     "renew_model = RenewalModel(33e6, analysis_start, analysis_end, run_in, proc_update_freq, fitter, GammaDens(), fitter, 50, epoch)"
    ]
   },
@@ -75,7 +75,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "calib = StandardCalib(renew_model, select_data)"
+    "calib = StandardCalib(renew_model, mys_data)"
    ]
   },
   {
