Move setting of epoch away from user

--- a/renew/02-analysis.ipynb
+++ b/renew/02-analysis.ipynb
@@ -32,7 +32,6 @@
     "from plotly.express.colors import qualitative as qual_colours\n",
     "\n",
     "from estival.sampling import tools as esamp\n",
-    "from summer2.utils import Epoch\n",
     "\n",
     "from emu_renewal.process import CosineMultiCurve\n",
     "from emu_renewal.distributions import GammaDens\n",
@@ -65,8 +64,7 @@
    "outputs": [],
    "source": [
     "fitter = CosineMultiCurve()\n",
-    "epoch = Epoch(datetime(2019, 12, 31))\n",
-    "renew_model = RenewalModel(33e6, analysis_start, analysis_end, run_in, proc_update_freq, fitter, GammaDens(), fitter, 50, epoch)"
+    "renew_model = RenewalModel(33e6, analysis_start, analysis_end, run_in, proc_update_freq, fitter, GammaDens(), fitter, 50)"
    ]
   },
   {
