Add 3D comparison graph for susceptible depletion versus transmission potential

--- a/renew/02-analysis.ipynb
+++ b/renew/02-analysis.ipynb
@@ -229,6 +229,47 @@
     "evidence_table.loc[:, \"Evidence\"] = \"To be populated [@cori2013]\"\n",
     "Markdown(evidence_table.to_markdown())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Markdown(renew_model.get_description())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from plotly import graph_objects as go"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig = go.Figure()\n",
+    "for i in spaghetti.columns.get_level_values(1):\n",
+    "    trace = go.Scatter3d(x=spaghetti.index, y=spaghetti[(\"susceptibles\", i)], z=spaghetti[(\"transmission potential\", i)], mode=\"lines\", line={\"width\": 5.0})\n",
+    "    fig.add_trace(trace)\n",
+    "axis_titles = {\"xaxis\": {\"title\": \"time\"}, \"yaxis\": {\"title\": \"susceptibles\"}, \"zaxis\": {\"title\": \"transmission potential\"}}\n",
+    "fig.update_layout(showlegend=False, scene=axis_titles, height=800)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "1"
+   ]
   }
  ],
  "metadata": {
