Attempt clean installable repo

--- a/notebooks/02-analysis.ipynb
+++ b/notebooks/02-analysis.ipynb
@@ -162,7 +162,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "patch_fig = plot_uncertainty_patches(quantiles_df, select_data, qual_colours.Plotly)\n",
@@ -175,9 +177,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Optional - requires kaleido\n",
     "#| label: fig-calib\n",
     "#| fig-cap: \"Calibration to sample data from Malaysia\"\n",
-    "patch_fig.write_image(\"patch_fig.svg\")"
+    "# patch_fig.write_image(\"patch_fig.svg\")"
    ]
   },
   {
@@ -229,6 +232,13 @@
     "evidence_table.loc[:, \"Evidence\"] = \"To be populated [@cori2013]\"\n",
     "Markdown(evidence_table.to_markdown())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
